--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,7 +42,10 @@
         "ICPR",
         "ISER",
         "ISPR",
+        "ittt",
         "LCKR",
+        "lcomm",
+        "ldrls",
         "LIFCR",
         "LISR",
         "littlearm",
@@ -71,12 +74,14 @@
         "prescaler",
         "PSIZE",
         "PUPDR",
+        "rodata",
         "RSTR",
         "RXCRCR",
         "SCFGR",
         "SDIO",
         "SSCGR",
         "strb",
+        "strls",
         "Systick",
         "TCIE",
         "TEIE",
